--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-icon-gooey-effect",
+  "name": "double-helix-02",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -7,15 +7,16 @@
     "autoprefixer": "^9.4.4",
     "browser-sync": "^2.26.3",
     "csswring": "^7.0.0",
-    "gulp": "^4.0.0",
-    "gulp-changed": "^3.2.0",
     "gulp-imagemin": "^5.0.3",
-    "gulp-csscomb": "^3.0.8",
-    "gulp-postcss": "^8.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp": "^4.0.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-changed": "^3.2.0",
     "gulp-sass": "^4.0.2",
-    "imagemin-mozjpeg": "^8.0.0",
+    "gulp-pug": "^4.0.1",
     "imagemin-pngquant": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "sparkles": "^1.0.1"
   },
